--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,9 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+	--dark: #2b2d42;
+	--platinum: #eaeaea;
+	--white: #ffffff;
+	--gray: #8d99ae;
+	--green: #a7f1dc;
+	--salmon: #ff858d;
+	--orange: #e9c46a;
 }
