--- a/src/components/navbar/PageNavbar.css
+++ b/src/components/navbar/PageNavbar.css
@@ -10,7 +10,14 @@
 }
 
 #sobreEsteProyecto {
-	border-radius: 0px 0px 0px 2rem;
+	border-radius: 2rem 0px 0px 0px;
 	background-color: var(--salmon);
 	color: white !important;
+	font-size: large;
+}
+
+#sobreEsteProyecto:hover {
+	transition: all 0.4s ease-in;
+	transform: scale(1.05);
+	filter: brightness(95%);
 }
