--- a/src/components/pages/ProductPage/ProductPage.css
+++ b/src/components/pages/ProductPage/ProductPage.css
@@ -14,8 +14,8 @@
 }
 .carousel-inner,
 .carousel-div {
-  height: 400px;
-  width: 400px;
+  max-height: 400px;
+  max-width: 500px;
 }
 #btn {
   background-color: var(--orange);
@@ -27,6 +27,10 @@
   width: 500px;
 }
 .user-avatar {
+  width: 40px;
+  height: 40px;
+}
+.spinner {
   width: 40px;
   height: 40px;
 }
