--- a/src/components/pages/Home/Home.css
+++ b/src/components/pages/Home/Home.css
@@ -29,9 +29,25 @@
 #h1::after {
   content: " ";
   display: block;
-  height: 100px; /* altura de la franja */
-  width: 100%; /* ancho de la franja */
-  background-color: var(--green); /* color de la franja */
+  height: 100px;
+  width: 100%;
+  background-color: var(--green);
   position: absolute;
   z-index: 1;
+}
+
+.img-container {
+  position: relative;
+}
+
+.icono-btn {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 5px;
+  border: none;
+  background-color: transparent;
+}
+.heart-icon {
+  font-size: 20px;
 }
