--- a/src/components/pages/ProductPage/ProductPage.css
+++ b/src/components/pages/ProductPage/ProductPage.css
@@ -31,7 +31,13 @@
   width: 40px;
   height: 40px;
 }
-.loding {
-  width: 10px;
-  height: 10px;
+.loading {
+  width: 30px;
+  height: 30px;
+}
+
+.big-loading {
+  margin: 0 auto;
+  width: 30px;
+  height: 30px;
 }
