--- a/src/components/ProductMini/ProductMini.css
+++ b/src/components/ProductMini/ProductMini.css
@@ -1,5 +1,8 @@
+#product-mini {
+	height: 25rem;
+}
+
 #productContainer {
-	position: relative;
 	transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
 	border-radius: 0.5rem;
 }
@@ -13,8 +16,12 @@
 	top: 0;
 	right: 0;
 	color: white;
-	margin: 0.5rem;
+	margin: 1rem;
 	font-size: large;
+}
+
+#infoContainer {
+	position: relative;
 }
 
 #rating {
@@ -37,12 +44,19 @@
 #price {
 	margin-bottom: 0;
 	margin-left: 0.5rem;
-	text-align: center;
-	position: absolute;
-	bottom: 0;
-	left: 0;
 	font-size: x-large;
 	font-weight: bolder;
+}
+
+#priceBefore {
+	margin-bottom: 0;
+	margin-left: 0.5rem;
+	bottom: 0;
+	left: 0;
+	font-size: small;
+	font-weight: light;
+	color: red;
+	text-decoration: line-through;
 }
 
 #productTitle {
