--- a/src/components/pages/SobreEsteProyecto/SobreEsteProyecto.css
+++ b/src/components/pages/SobreEsteProyecto/SobreEsteProyecto.css
@@ -1,10 +1,15 @@
+.row {
+	margin: 0 !important;
+}
+
 .darkSection {
 	background-color: var(--dark);
-
-	display: flex;
+	padding: 3rem 0;
+	/* display: flex; */
 	justify-content: space-evenly;
 	align-items: center;
 	min-height: 6rem;
+	margin: 0;
 }
 
 .darkSection > * {
@@ -12,7 +17,7 @@
 	text-align: center;
 }
 
-.icons > a {
+.icons > a > i {
 	color: white;
 	text-decoration: none;
 }
@@ -96,7 +101,7 @@
 }
 
 .custom-shape-divider-top-1679573669 .shape-fill {
-	fill: #383a48;
+	fill: var(--dark);
 }
 
 #iconList > div > div {
@@ -105,4 +110,8 @@
 	padding: 2rem;
 	align-items: center;
 	gap: 0.5rem;
+}
+
+Container {
+	padding: 0;
 }
