--- a/src/components/pages/Home/Home.css
+++ b/src/components/pages/Home/Home.css
@@ -1,60 +1,61 @@
 :root {
-  --dark: #2b2d42;
-  --platinum: #eaeaea;
-  --white: #ffffff;
-  --gray: #8d99ae;
-  --green: #a7f1dc;
-  --salmon: #ff858d;
-  --orange: #e9c46a;
+	--dark: #2b2d42;
+	--platinum: #eaeaea;
+	--white: #ffffff;
+	--gray: #8d99ae;
+	--green: #a7f1dc;
+	--salmon: #ff858d;
+	--orange: #e9c46a;
 }
 * {
-  color: var(--dark);
+	color: var(--dark);
 }
 
-.categorys-img {
-  object-fit: cover;
-  height: 114px;
-  width: 114px;
+#categoryDisplay {
+	position: absolute;
+	bottom: 22rem;
+	width: 100vw;
+}
+
+.categories-img {
+	object-fit: cover;
+	height: 114px;
+	width: 114px;
 }
 .destacados-img {
-  object-fit: cover;
-  height: 200px;
+	object-fit: cover;
+	height: 200px;
 }
+
 .bg-verdeagua {
-  background: var(--green);
+	background-image: url(backgroundGreen.png);
+	height: 15rem;
+	width: 100%;
 }
+
 .h-100px {
-  height: 100px;
-}
-#h1::after {
-  content: " ";
-  display: block;
-  height: 100px;
-  width: 100%;
-  background-color: var(--green);
-  position: absolute;
-  z-index: 1;
+	height: 100px;
 }
 
 .img-container {
-  position: relative;
+	position: relative;
 }
 
 .icono-btn {
-  position: absolute;
-  top: 0;
-  right: 0;
-  padding: 5px;
-  border: none;
-  background-color: transparent;
+	position: absolute;
+	top: 0;
+	right: 0;
+	padding: 5px;
+	border: none;
+	background-color: transparent;
 }
 .heart-icon {
-  font-size: 20px;
+	font-size: 20px;
 }
 .d-block.fs-5.fw-semibold.btn:hover {
-  background-color: var(--gray);
+	background-color: var(--gray);
 }
 
 #product {
-  height: 50px;
+	height: 50px;
 }
