--- a/src/components/pages/Home/Home.css
+++ b/src/components/pages/Home/Home.css
@@ -14,7 +14,6 @@
 #categoryDisplay {
 	position: absolute;
 	bottom: 22rem;
-	width: 100vw;
 }
 
 .categories-img {
@@ -31,6 +30,7 @@
 	background-image: url(backgroundGreen.png);
 	height: 15rem;
 	width: 100%;
+	margin-bottom: 10rem;
 }
 
 .h-100px {
