--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,13 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 :root {
 	--dark: #383a48;
 	--platinum: #eaeaea;
 	--white: #ffffff;
-	--gray: #8d99ae;
-	--green: #a7f1dc;
-	--salmon: #ffb8bd;
-	--orange: #ffeab6;
+	--primary: #53473b;
+	--secondary: #a0887d;
+	--tertiary: #9ea190;
+	--accent: #848c7c;
 }
 
 .container-fluid {
@@ -16,5 +16,5 @@
 }
 
 * {
-	font-family: "Nunito", sans-serif;
+	font-family: "Lora", serif;
 }
