--- a/src/components/pages/Home/Home.css
+++ b/src/components/pages/Home/Home.css
@@ -1,14 +1,40 @@
-:root {
-	--dark: #2b2d42;
-	--platinum: #eaeaea;
-	--white: #ffffff;
-	--gray: #8d99ae;
-	--green: #a7f1dc;
-	--salmon: #ff858d;
-	--orange: #e9c46a;
-}
 * {
 	color: var(--dark);
+}
+
+.carousel,
+.carousel-inner,
+.carousel-item {
+	height: 70vh !important;
+}
+
+.carousel-item > * > img {
+	object-fit: cover;
+}
+
+.carouselCaption {
+	width: 35rem;
+	text-align: left !important;
+	color: black !important;
+	position: absolute;
+	top: 28%;
+	left: 13%;
+}
+
+.carouselCaption > h2 {
+	font-size: 3rem;
+}
+.carouselCaption > p {
+	font-size: 1.5rem;
+	font-weight: light !important;
+}
+
+.bannerBtn {
+	background-color: var(--tertiary) !important;
+	color: white !important;
+	padding: 0.5rem 1.5rem !important;
+	margin-top: 2rem;
+	font-size: large !important;
 }
 
 #categoryDisplay {
