--- a/src/components/pages/Home/Home.css
+++ b/src/components/pages/Home/Home.css
@@ -85,3 +85,16 @@
 #product {
 	height: 50px;
 }
+
+.categoryLink {
+	font-size: large;
+	margin-left: 2rem;
+	text-decoration: none;
+	color: var(--accent);
+	margin-bottom: 1rem;
+}
+
+.categoryLink:hover {
+	text-decoration: none;
+	color: var(--primary);
+}
