--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ input[type="search"]::-webkit-search-results-decoration {
 	--primary: #53473b;
 	--secondary: #a0887d;
 	--tertiary: #9ea190;
-	--accent: #848c7c;
+	--accent: #788070;
 }
 
 .container-fluid {
@@ -36,4 +36,52 @@ input[type="search"]::-webkit-search-results-decoration {
 
 * {
 	font-family: "Lora", serif;
+}
+
+.screen {
+	height: 100vh;
+	width: 100vw;
+	background-color: var(--platinum);
+}
+
+.spinner {
+	position: fixed;
+	width: 56px;
+	height: 56px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	top: 45%;
+	left: 48%;
+}
+
+.spinner::before,
+.spinner::after {
+	border: 6.7px solid var(--accent);
+	border-radius: 50%;
+	position: absolute;
+	content: "";
+	display: block;
+}
+
+.spinner::before {
+	width: 33.6px;
+	height: 33.6px;
+	border-bottom-color: transparent;
+	border-left-color: transparent;
+	animation: spinner-1o3y8q 0.75s infinite linear reverse;
+}
+
+.spinner::after {
+	animation: spinner-1o3y8q 0.5s infinite linear;
+	height: 56px;
+	width: 56px;
+	border-right-color: transparent;
+	border-top-color: transparent;
+}
+
+@keyframes spinner-1o3y8q {
+	to {
+		transform: rotate(360deg);
+	}
 }
