--- a/src/index.css
+++ b/src/index.css
@@ -2,86 +2,86 @@
 
 /* clears the ‘X’ from Internet Explorer */
 input[type="search"]::-ms-clear {
-	display: none;
-	width: 0;
-	height: 0;
+  display: none;
+  width: 0;
+  height: 0;
 }
 input[type="search"]::-ms-reveal {
-	display: none;
-	width: 0;
-	height: 0;
+  display: none;
+  width: 0;
+  height: 0;
 }
 /* clears the ‘X’ from Chrome */
 input[type="search"]::-webkit-search-decoration,
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-results-button,
 input[type="search"]::-webkit-search-results-decoration {
-	display: none;
+  display: none;
 }
 
 :root {
-	--dark: #383a48;
-	--platinum: #eaeaea;
-	--white: #ffffff;
-	--primary: #53473b;
-	--secondary: #a0887d;
-	--tertiary: #9ea190;
-	--accent: #788070;
+  --dark: #383a48;
+  --platinum: #eaeaea;
+  --white: #ffffff;
+  --primary: #4b453f;
+  --secondary: #887c76;
+  --tertiary: #9ea190;
+  --accent: #788070;
 }
 
 .container-fluid {
-	padding: 0;
-	margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
 * {
-	font-family: "Lora", serif;
+  font-family: "Lora", serif;
 }
 
 .screen {
-	height: 100vh;
-	width: 100vw;
-	background-color: var(--platinum);
+  height: 100vh;
+  width: 100vw;
+  background-color: var(--platinum);
 }
 
 .spinner {
-	position: fixed;
-	width: 56px;
-	height: 56px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	top: 45%;
-	left: 48%;
+  position: fixed;
+  width: 56px;
+  height: 56px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 45%;
+  left: 48%;
 }
 
 .spinner::before,
 .spinner::after {
-	border: 6.7px solid var(--accent);
-	border-radius: 50%;
-	position: absolute;
-	content: "";
-	display: block;
+  border: 6.7px solid var(--accent);
+  border-radius: 50%;
+  position: absolute;
+  content: "";
+  display: block;
 }
 
 .spinner::before {
-	width: 33.6px;
-	height: 33.6px;
-	border-bottom-color: transparent;
-	border-left-color: transparent;
-	animation: spinner-1o3y8q 0.75s infinite linear reverse;
+  width: 33.6px;
+  height: 33.6px;
+  border-bottom-color: transparent;
+  border-left-color: transparent;
+  animation: spinner-1o3y8q 0.75s infinite linear reverse;
 }
 
 .spinner::after {
-	animation: spinner-1o3y8q 0.5s infinite linear;
-	height: 56px;
-	width: 56px;
-	border-right-color: transparent;
-	border-top-color: transparent;
+  animation: spinner-1o3y8q 0.5s infinite linear;
+  height: 56px;
+  width: 56px;
+  border-right-color: transparent;
+  border-top-color: transparent;
 }
 
 @keyframes spinner-1o3y8q {
-	to {
-		transform: rotate(360deg);
-	}
+  to {
+    transform: rotate(360deg);
+  }
 }
