--- a/src/components/pages/SignUp/SignUp.css
+++ b/src/components/pages/SignUp/SignUp.css
@@ -1,13 +1,28 @@
-Container {
-  background-color: hotpink;
+#button {
+  background-color: var(--secondary);
+  width: 10rem;
+  margin-left: auto;
+  margin-right: auto;
+  border: none;
 }
 
-.caja {
-  background-color: gray;
-  border-style: solid;
-  border-color: palevioletred;
+#button:hover {
+  background-color: var(--primary);
 }
 
-.titulo {
-  color: palevioletred;
+#content {
+  backdrop-filter: blur(4px);
+  height: 88.1vh;
+}
+
+a {
+  text-decoration: none;
+  color: var(--accent);
+}
+
+#background {
+  padding: 0;
+  background-image: url(/public/img/topBanner.jpg);
+  height: 88.1vh;
+  background-size: 100vw;
 }
