--- a/src/components/pages/Login/Login.css
+++ b/src/components/pages/Login/Login.css
@@ -25,5 +25,6 @@
   padding: 0;
   background-image: url(/public/img/topBanner.jpg);
   height: 88.1vh;
-  background-size: 100vw;
+  background-size: cover !important;
+  background-repeat: no-repeat;
 }
