--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -5,3 +5,28 @@
   z-index: 1040;
   display: inline-block;
 }
+
+.volver {
+  color: blue;
+}
+
+.hr {
+  border: none;
+  border-left: 0.125rem solid hsla(200, 10%, 50%, 100);
+  height: 5%;
+  width: 0.125rem;
+}
+
+.volver:hover {
+  text-decoration: none;
+  color: red;
+}
+
+.admin-bottons {
+  color: black;
+}
+
+.admin-bottons:hover {
+  text-decoration: none;
+  color: red;
+}
