--- a/src/components/pages/Category/Category.css
+++ b/src/components/pages/Category/Category.css
@@ -58,3 +58,14 @@
   background-color: var(--tertiary);
   color: var(--dark) !important;
 }
+.categoryLink {
+  font-size: large;
+  margin-left: 2rem;
+  text-decoration: none;
+  color: var(--accent);
+  margin-bottom: 1rem;
+}
+#categoryLink:hover {
+  transition: all 0.5s ease;
+  transform: scale(1.05);
+}
