--- a/src/components/navbar/PageNavbar.css
+++ b/src/components/navbar/PageNavbar.css
@@ -1,44 +1,45 @@
 #mainBar {
-	height: 3rem;
+  height: 3rem;
 }
 
 #categoryBar {
-	height: 2rem;
-	width: 60vw;
+  height: 2rem;
+  width: 50vw;
 }
 
 #categoryBar > div {
-	justify-content: space-evenly !important;
+  justify-content: space-evenly !important;
 }
 
 #sobreEsteProyecto {
-	position: fixed;
-	z-index: 2;
-	border-radius: 0px 0px 2rem 0px;
-	padding-left: 0.5rem;
-	background-color: var(--accent);
-	color: white !important;
-	font-size: large;
+  position: fixed;
+  z-index: 2;
+  border-radius: 0px 0px 2rem 0px;
+  padding-left: 0.5rem;
+  background-color: var(--accent);
+  color: white !important;
+  font-size: large;
 }
 
 #sobreEsteProyecto:hover {
-	transition: all 0.4s ease-in;
-	transform: scale(1.05);
-	filter: brightness(95%);
+  transition: all 0.4s ease-in;
+  transform: scale(1.05);
+  filter: brightness(95%);
 }
 
 #search {
-	margin-right: 5rem;
-	width: 60vw !important;
-}
-
-#search:active,
-#search:focus {
-	box-shadow: none;
-	border: 1px solid gray;
+  margin-right: 2rem;
 }
 
 .bi-search {
-	right: 7rem;
-	bottom: 0.5rem;
+  right: 4rem;
+  bottom: 0.5rem;
+}
+
+.icon {
+  color: var(--accent);
+}
+
+.nav-logo {
+  width: 13rem;
 }
