--- a/src/index.css
+++ b/src/index.css
@@ -85,3 +85,14 @@ input[type="search"]::-webkit-search-results-decoration {
     transform: rotate(360deg);
   }
 }
+
+*::selection {
+  background: var(--accent);
+}
+
+.form-control:active,
+.form-control:focus {
+  background-color: #fcfcfc !important;
+  box-shadow: none !important;
+  border: 1px solid gray !important;
+}
