--- a/src/components/pages/Product/Product.module.css
+++ b/src/components/pages/Product/Product.module.css
@@ -1,7 +1,3 @@
-* {
-  color: #2b2d42;
-}
-
 .carousel,
 .carousel-inner,
 .carousel-item {
@@ -16,10 +12,10 @@
 #btn:hover {
   background-color: var(--secondary);
 }
-#reviews-container {
+#reviewsContainer {
   width: 500px;
 }
-.user-avatar {
+.userAvatar {
   width: 40px;
   height: 40px;
 }
@@ -28,16 +24,13 @@
   height: 30px;
 }
 
-.big-loading {
+.bigLoading {
   margin: 0 auto;
   width: 30px;
   height: 30px;
 }
-.object-fit-cover {
-  object-fit: cover;
-}
 
-.carousel-image {
+.carouselImage {
   border-radius: 2rem;
 }
 
