--- a/src/components/pages/Profile/Profile.module.css
+++ b/src/components/pages/Profile/Profile.module.css
@@ -1,9 +1,10 @@
-.profile-img {
+.profileImg {
   width: 150px;
   height: 150px;
   object-fit: cover;
 }
-.container-fluid.py-5.align-item-center.justify-content-center {
+
+#topBanner {
   background-image: url(tom-crew-YA2E3d7a9Wo-unsplash.jpg);
   background-size: cover;
   background-position: center center;
