--- a/src/components/pages/Cart/Cart.module.css
+++ b/src/components/pages/Cart/Cart.module.css
@@ -1,8 +1,4 @@
-* {
-  font-size: 14px;
-}
-
-.product-image {
+.productImage {
   width: 8rem;
   height: 8rem;
 }
@@ -13,7 +9,7 @@
 #btn-continue-buying:hover {
   background-color: #8d927a;
 }
-.container-fluid.py-5.align-item-center.justify-content-center {
+#topBanner {
   background-image: url(tom-crew-YA2E3d7a9Wo-unsplash.jpg);
   background-size: cover;
   background-position: center center;
