--- a/src/components/PageNavbar/PageNavbar.module.css
+++ b/src/components/PageNavbar/PageNavbar.module.css
@@ -57,7 +57,7 @@
   width: 100%;
 }
 
-.bi-search {
+.searchIcon {
   right: 4rem;
   bottom: 0.5rem;
 }
@@ -66,6 +66,6 @@
   color: var(--accent);
 }
 
-.nav-logo {
+.navLogo {
   width: 13rem;
 }
