--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -3,17 +3,11 @@
   height: 100vh;
   padding: 20px;
 }
+
 .tituloSidebar {
   color: azure;
   font-size: x-large;
-  margin-top: 2rem;
-}
-
-.topMenu {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 100px;
+  margin-top: 10rem;
 }
 
 .botonAdmin {
@@ -29,44 +23,40 @@
   color: beige;
   margin-top: 4rem;
   font-size: large;
-}
-
-.hr {
-  border: none;
-  border-left: 0.125rem solid hsla(200, 10%, 50%, 100);
-  height: 5%;
-  width: 0.125rem;
+  text-decoration: none;
 }
 
 .volver:hover {
   text-decoration: none;
   color: #e0e0e0;
+  border-radius: 8px;
+  font-size: 20px;
+  background-color: var(--tertiary);
+  width: 300px;
 }
 
-.adminButton {
+.adminButtons {
   margin-left: 1rem;
   color: black;
   margin-top: 3rem;
   color: whitesmoke;
   font-size: large;
   cursor: pointer;
+  text-decoration: none;
+  width: 300px;
 }
 
-.adminButton:hover {
+.adminButtons:hover {
   text-decoration: none;
   background-color: var(--tertiary);
   border-radius: 8px;
-  display: flex;
   align-items: center;
-  width: 210px;
+  width: 300px;
   background-size: cover;
   color: #e0e0e0;
   text-shadow: beige;
-  text-decoration: double;
-  text-shadow: #c7e1ff;
   cursor: pointer;
   font-size: 20px;
-  transition: all 0.3s ease;
 }
 
 #menu {
