--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,13 +1,24 @@
 #text-footer {
   background-color: white;
-}
-
-.socials {
-  margin-top: 1rem;
+  font-size: small;
 }
 
 .socials > .bi {
-  margin-right: 2rem;
+  margin-right: 2.2rem;
   color: var(--accent);
   font-size: large;
+}
+
+.green > li > i {
+  color: var(--accent);
+  font-size: medium;
+  padding-right: 0.5rem;
+}
+
+.linkStyle > li {
+  padding-bottom: 0.5rem;
+}
+.linkStyle > li > * {
+  color: var(--dark);
+  text-decoration: none;
 }
