--- a/src/index.css
+++ b/src/index.css
@@ -88,7 +88,7 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 
 *::selection {
-  background: var(--accent);
+  background: var(--tertiary);
 }
 
 .form-control:active,
