--- a/src/components/pages/SobreEsteProyecto/SobreEsteProyecto.module.css
+++ b/src/components/pages/SobreEsteProyecto/SobreEsteProyecto.module.css
@@ -56,7 +56,6 @@
 
 .platinumSection {
   background-color: var(--platinum);
-  height: 25rem;
   margin-top: 0;
   text-align: center;
   padding: 2rem;
@@ -71,7 +70,7 @@
   padding: 1rem;
   box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.1);
   border-radius: 2rem;
-  height: 20rem;
+  min-height: 20rem;
   background: rgba(255, 255, 255, 0.1);
   backdrop-filter: blur(8px);
   -webkit-backdrop-filter: blur(8px);
