--- a/src/components/Admin/Admin.module.css
+++ b/src/components/Admin/Admin.module.css
@@ -1,81 +1,8 @@
-.text-end {
-  margin-right: 3rem;
-  margin-bottom: 2rem;
-}
-
-.bannerBtn {
-  background-color: var(--tertiary) !important;
-  color: white !important;
-  padding: 0.5rem 1.5rem !important;
-  margin-top: 2rem;
-  font-size: large !important;
-}
-
 #background {
   padding: 0;
   background-image: url(/public/img/topBanner.jpg);
   height: 88.1vh;
   background-size: 100vw;
-}
-
-.bannerBtn:hover {
-  background-color: var(--accent) !important;
-}
-
-.h-100px {
-  height: 100px;
-}
-
-.icono-btn {
-  position: absolute;
-  top: 0;
-  right: 0;
-  padding: 5px;
-  border: none;
-  background-color: transparent;
-}
-.heart-icon {
-  font-size: 20px;
-}
-.d-block.fs-5.fw-semibold.btn:hover {
-  background-color: var(--gray);
-}
-
-#product {
-  height: 50px;
-}
-
-#display {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin: 3rem 0px;
-}
-
-.botonAgregar {
-  margin-bottom: 2rem;
-  margin-right: 1rem;
-}
-
-.categoriesimg {
-  width: 150px;
-  height: 150px;
-}
-
-.text-end {
-  margin-bottom: 2rem;
-  margin-right: 1rem;
-}
-
-.tableProducts {
-  /* margin-left: 1rem;
-  margin-right: 1rem; */
-}
-
-#backgroundAdminLogin {
-  padding: 0;
-  background-color: var(--tertiary);
-  background-size: cover;
 }
 
 .buttons {
@@ -85,13 +12,26 @@
 .titulo {
   color: white;
   text-align: center;
-  background-color: var(--secondary);
 }
 
 .tituloContainer {
   color: white;
+  display: inline;
 }
 
 .backgroundTop {
-  background-color: var(--secondary);
+  padding: 0;
+  background-color: var(--tertiary);
+}
+
+.header {
+  padding: 0.5rem;
+  padding-top: 1.5rem;
+}
+
+.table {
+  background-color: white;
+  margin: 1rem;
+  margin-top: 0;
+  width: 100%;
 }
