--- a/src/components/pages/Home/Home.module.css
+++ b/src/components/pages/Home/Home.module.css
@@ -35,7 +35,7 @@
 
 .destacadosImg {
   object-fit: cover;
-  height: 200px;
+  aspect-ratio: 1;
 }
 
 .h100px {
@@ -68,15 +68,14 @@
 }
 
 #display {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin: 3rem 0px;
-  max-width: 100vw;
+  padding: 3rem 0px;
 }
 
 .displayOffer {
   position: relative;
+  display: flex;
+  justify-content: start;
+  align-items: center;
 }
 
 .displayOffer:hover {
@@ -90,8 +89,7 @@
 
 .displayOffer > div {
   position: absolute;
-  left: 2rem;
-  top: 5rem;
+  padding-left: 2rem;
 }
 
 #categoryDisplay {
@@ -109,4 +107,10 @@
 
 #categoryDisplay > div:hover {
   transform: scale(1.05);
+}
+
+@media (max-width: 991.99px) {
+  #categoryDisplay {
+    justify-content: space-evenly;
+  }
 }
