--- a/src/components/Newsletter/Newsletter.module.css
+++ b/src/components/Newsletter/Newsletter.module.css
@@ -7,3 +7,29 @@
   backdrop-filter: blur(5px);
   background-attachment: fixed;
 }
+
+#button {
+  background-color: var(--tertiary) !important;
+  color: white !important;
+  border: none;
+  width: 7rem;
+  font-size: small;
+}
+
+#button:hover {
+  background-color: var(--accent) !important;
+}
+
+#buttonLogged {
+  background-color: var(--tertiary) !important;
+  color: white !important;
+  border: none;
+}
+
+#buttonLogged:hover {
+  background-color: var(--accent) !important;
+}
+
+.iconsend {
+  color: var(--primary) !important;
+}
