--- a/src/components/Admin/Edit/Edit.module.css
+++ b/src/components/Admin/Edit/Edit.module.css
@@ -20,3 +20,13 @@
   background-size: cover !important;
   background-repeat: no-repeat;
 }
+
+.adminButton {
+  background-color: var(--accent) !important;
+  border-color: var(--accent) !important;
+}
+
+.adminButton:hover {
+  background-color: var(--primary) !important;
+  border-color: var(--primary) !important;
+}
