Toast(Cartel "Not Implemented")

--- a/src/components/ProductMini/ProductMini.module.css
+++ b/src/components/ProductMini/ProductMini.module.css
@@ -85,3 +85,12 @@
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
+.rightBottomZero {
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+}
+.toast {
+  background-color: var(--accent);
+  height: 1rem;
+}
