--- a/src/components/pages/Product/Product.module.css
+++ b/src/components/pages/Product/Product.module.css
@@ -81,3 +81,12 @@
   display: none;
   color: white;
 }
+.rightBottomZero {
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+}
+.toast {
+  background-color: var(--accent);
+  height: 1rem;
+}
