--- a/src/components/pages/SobreEsteProyecto/SobreEsteProyecto.module.css
+++ b/src/components/pages/SobreEsteProyecto/SobreEsteProyecto.module.css
@@ -48,6 +48,7 @@
   background: var(--accent);
   background: -webkit-linear-gradient(176deg, var(--accent) 0%, #1c2e29 50%, var(--primary) 100%);
   background: linear-gradient(176deg, var(--accent) 0%, var(--tertiary) 100%);
+  color: white;
 }
 
 .greenSection > h1 {
@@ -70,7 +71,6 @@
   padding: 1rem;
   box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.1);
   border-radius: 2rem;
-  min-height: 20rem;
   background: rgba(255, 255, 255, 0.1);
   backdrop-filter: blur(8px);
   -webkit-backdrop-filter: blur(8px);
