--- a/src/components/Order/OrderItem/OrderItem.module.css
+++ b/src/components/Order/OrderItem/OrderItem.module.css
@@ -9,3 +9,12 @@
   height: 10rem;
   width: 10rem;
 }
+.rightBottomZero {
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+}
+.toast {
+  background-color: var(--accent);
+  height: 1rem;
+}
