--- a/src/components/pages/SobreEsteProyecto/SobreEsteProyecto.module.css
+++ b/src/components/pages/SobreEsteProyecto/SobreEsteProyecto.module.css
@@ -44,7 +44,7 @@
   text-align: center;
   padding: 2rem;
   height: 15rem;
-  box-shadow: 0px 6px 25px 0px rgba(0, 0, 0, 0.164);
+  box-shadow: inset 0px 0px 15px 4px rgba(0, 0, 0, 0.16);
   background: var(--accent);
   background: -webkit-linear-gradient(176deg, var(--accent) 0%, #1c2e29 50%, var(--primary) 100%);
   background: linear-gradient(176deg, var(--accent) 0%, var(--tertiary) 100%);
@@ -60,6 +60,10 @@
   margin-top: 0;
   text-align: center;
   padding: 2rem;
+}
+
+.techSection {
+  box-shadow: inset 0px 0px 15px 4px rgba(0, 0, 0, 0.16);
 }
 
 #infoSection {
